# llvm-node

./: CHANGELOG.md  CMakeLists.txt  llvm-node.d.ts  package-lock.json  package.json
src/ir/: alloca-inst.cc  pass.cc
src/jit/: KaleidoscopeJIT.h  jit-symbol.cc  jit-symbol.h  kaleidoscope-jit.cc
src/support/: support.cc  support.h
test/support/: support.spec.ts
